--- a/ConsoleLoopSystem.csproj
+++ b/ConsoleLoopSystem.csproj
@@ -1,8 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="Controller\" />
+    <Folder Include="Model\Game\Plot\" />
+    <Folder Include="Data\" />
+    <Folder Include="Service\" />
+    <Folder Include="Views\" />
+  </ItemGroup>
 
 </Project>
